--- a/ExpenseAssignment/src/main/resources/application.properties
+++ b/ExpenseAssignment/src/main/resources/application.properties
@@ -12,21 +12,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-status = error
-name = PropertiesConfig
- 
-filters = threshold
- 
-filter.threshold.type = ThresholdFilter
-filter.threshold.level = debug
- 
-appenders = console
- 
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
- 
-rootLogger.level = debug
-rootLogger.appenderRefs = stdout
-rootLogger.appenderRef.stdout.ref = ST
+spring.flyway.baseline-on-migrate=true
